On Splash Screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/defaultBackground"
+    android:background="@color/white"
     tools:context=".app.features.ModuleSelectorActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:background="@drawable/blue_background"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -44,7 +44,7 @@
             android:fontFamily="@font/poppin"
             android:gravity="center"
             android:text="@string/Uber"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/black"
             android:textSize="50dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
             android:fontFamily="@font/poppin"
             android:gravity="center"
             android:text="Move the way you want."
-            android:textColor="#FFFFFF"
+            android:textColor="@color/black"
             android:textSize="30dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/imageView"
@@ -117,7 +117,7 @@
         android:fontFamily="@font/poppin"
         android:gravity="center"
         android:text="@string/please_choose"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/black"
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
