--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -93,7 +93,7 @@
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="132dp"
-        android:background="@drawable/roundedcorners"
+        android:background="@drawable/facebook_login"
         android:elevation="20dp"
         android:padding="10dp"
         android:text="Login with Facebook"
@@ -161,7 +161,7 @@
         android:layout_width="186dp"
         android:layout_height="54dp"
         android:layout_marginBottom="100dp"
-        android:background="@drawable/roundedcorners"
+        android:background="@drawable/facebook_login"
         android:fontFamily="@font/poppin_bold"
         android:text="Sign In"
         android:textColor="@color/black"
