--- a/app/src/main/res/layout/activity_sign_up_driver.xml
+++ b/app/src/main/res/layout/activity_sign_up_driver.xml
@@ -164,7 +164,7 @@
         android:id="@+id/btn_signupDriver"
         android:layout_width="186dp"
         android:layout_height="54dp"
-        android:background="@drawable/roundedcorners"
+        android:background="@drawable/facebook_login"
         android:fontFamily="@font/poppin_bold"
         android:text="Sign Up"
         android:textColor="@color/black"
