--- a/app/src/main/res/layout/activity_sign_up_rider.xml
+++ b/app/src/main/res/layout/activity_sign_up_rider.xml
@@ -147,7 +147,7 @@
         android:layout_width="186dp"
         android:layout_height="54dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/roundedcorners"
+        android:background="@drawable/facebook_login"
         android:fontFamily="@font/poppin_bold"
         android:text="Sign Up"
         android:textColor="@color/black"
