Sign in and Sign up with phone verification

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="defaultBackground">#4CE5B1</color>
     <color name="mapsStatus">#5C02FA</color>
     <color name="mapsStatusBar">#161F53</color>
+    <color  name="lineColor">#EFEFF4</color>
+    <color name="grey">#C8C7CC</color>
 </resources>
