--- a/app/src/main/res/layout/activity_on_board.xml
+++ b/app/src/main/res/layout/activity_on_board.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.features.OnBoardActivity">
+    tools:context=".app.features.commonFeatures.OnBoardActivity">
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/onBoardViewPager"
         android:layout_width="match_parent"
