--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:background="@color/defaultBackground"
-    tools:context=".app.features.SignInActivity">
+    tools:context=".app.features.registration.SignInActivity">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,8 +40,8 @@
     <ProgressBar
         android:id="@+id/loginProgressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="69dp"
         android:layout_marginBottom="44dp"
         android:outlineSpotShadowColor="@color/white"
         android:visibility="invisible"
@@ -200,7 +200,7 @@
                 android:text="Next"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="parent" />
 
 
