Pickup and Destination

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -197,7 +197,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/roundedcorners"
                 android:fontFamily="@font/poppin"
-                android:text="Next"
+                android:text="Sign In"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="25sp"
