--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,47 +7,22 @@
     android:id="@+id/drawerLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <RelativeLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="10dp"
-            android:elevation="10dp"
-            >
-
-
-            <EditText
-                android:id="@+id/searchMap"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-                android:background="@drawable/roundedcorners"
-                android:drawableLeft="@drawable/search"
-                android:gravity="center"
-                android:hint="Enter Destination You Want "
-                android:imeOptions="actionSearch"
-                android:paddingLeft="15dp"
-
-                android:textColor="@color/white"
-                android:textColorHint="@color/white">
-
-            </EditText>
-
-
-        </RelativeLayout>
-
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/activity_maps_xml_constraintlayout3_scene">
 
         <fragment
             android:id="@+id/map"
             class="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="500dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:context=".MapsActivity" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -55,29 +30,152 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="125dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/roundedcorners"
-            android:drawableStart="@drawable/gps"
+            android:background="@drawable/input_bg"
+            android:drawableStart="@drawable/ic_baseline_gps_fixed_24"
             android:paddingStart="8dp"
             android:scaleType="centerCrop"
-            android:textCursorDrawable="@drawable/gps"></androidx.appcompat.widget.AppCompatButton>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/navigationIcon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="125dp"
-            android:layout_marginRight="350dp"
-            android:background="@drawable/roundedcorners"
-            android:drawableStart="@drawable/ic_baseline_menu_24"
-            android:paddingStart="8dp"
-            android:scaleType="centerCrop"
-            android:textCursorDrawable="@drawable/gps">
+            android:textCursorDrawable="@drawable/gps"
+            app:layout_constraintBottom_toBottomOf="@+id/map"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.956"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/map"
+            app:layout_constraintVertical_bias="0.928">
 
         </androidx.appcompat.widget.AppCompatButton>
-    </RelativeLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/scrollView2"
+            android:layout_width="match_parent"
+            android:layout_height="226dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/map"
+            app:layout_constraintVertical_bias="1.0">
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="57dp"
+                android:layout_height="6dp"
+                android:layout_gravity="center|top"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/bar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+            </ImageView>
+
+            <EditText
+                android:id="@+id/searchMap"
+                android:layout_width="287dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="9dp"
+                android:fontFamily="@font/poppin"
+                app:layout_constraintStart_toEndOf="@+id/imageView8"
+                app:layout_constraintTop_toBottomOf="@+id/textView8">
+
+            </EditText>
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="16dp"
+                android:src="@drawable/marker_red"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView6">
+
+            </ImageView>
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
+                android:layout_marginTop="28dp"
+                android:fontFamily="@font/poppin"
+                android:text="PickUp"
+                android:textSize="15dp"
+                app:layout_constraintEnd_toStartOf="@+id/imageView4"
+                app:layout_constraintHorizontal_bias="0.449"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
+                android:layout_marginStart="24dp"
+
+                android:fontFamily="@font/poppin"
+                android:text="Drop Off"
+                app:layout_constraintStart_toEndOf="@+id/imageView6"
+                app:layout_constraintTop_toBottomOf="@+id/imageView7">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/pickUpPoint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:fontFamily="@font/poppin"
+                android:text="My Current Location"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/imageView5"
+                app:layout_constraintTop_toBottomOf="@+id/textView7">
+
+            </TextView>
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="16dp"
+                android:src="@drawable/green_light"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView7">
+
+            </ImageView>
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="3dp"
+                android:layout_height="53dp"
+                android:layout_marginStart="28dp"
+                android:src="@drawable/dotted_line"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView5">
+
+            </ImageView>
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="309dp"
+                android:layout_height="3dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/seperate_line"
+                app:layout_constraintStart_toEndOf="@+id/imageView6"
+                app:layout_constraintTop_toBottomOf="@+id/pickUpPoint">
+
+            </ImageView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    </androidx.constraintlayout.motion.widget.MotionLayout>
+
+
+
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
