--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
         <item android:id="@+id/navhome"
             android:title="Home"
             android:icon="@drawable/ic_baseline_home_24">
+
+        </item>
+        <item android:id="@+id/navpersonalinfo"
+            android:title="Pernsonal Information"
+            android:icon="@drawable/ic_baseline_person_24">
 
         </item>
         <item android:id="@+id/navtrips"
@@ -13,15 +20,17 @@
             android:icon="@drawable/ic_baseline_history_24">
 
         </item>
-        <item android:id="@+id/navsettings"
-            android:title="Settings"
-            android:icon="@drawable/ic_baseline_settings_24">
+        <item android:id="@+id/navcomplain"
+            android:title="Complain"
+            android:icon="@drawable/ic_baseline_report_problem_24">
 
         </item>
+
         <item android:id="@+id/navlogOut"
             android:title="Log Out"
             android:icon="@drawable/logout">
 
         </item>
+
     </group>
 </menu>
