--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -62,6 +62,7 @@
                 android:layout_gravity="center|top"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/bar"
+                app:layout_constraintBottom_toTopOf="@+id/textView7"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -78,6 +79,15 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView8">
 
             </EditText>
+
+            <ImageView
+                android:id="@+id/markerSearch"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/marker_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/searchMap"
+                tools:layout_editor_absoluteY="127dp"></ImageView>
 
             <ImageView
                 android:id="@+id/imageView8"
@@ -169,7 +179,6 @@
             </ImageView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
