--- a/app/src/main/res/xml/activity_maps_xml_constraintlayout3_scene.xml
+++ b/app/src/main/res/xml/activity_maps_xml_constraintlayout3_scene.xml
@@ -31,6 +31,28 @@
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
+        <Constraint
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            motion:layout_constraintHorizontal_bias="1.0"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="4dp"
+            android:id="@+id/map"
+            motion:layout_constraintBottom_toTopOf="@+id/scrollView2"
+            android:layout_marginBottom="2dp" />
+        <Constraint
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="226dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintVertical_bias="1.0"
+            motion:layout_constraintTop_toBottomOf="@+id/map"
+            motion:layout_constraintHorizontal_bias="1.0"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/scrollView2"
+            android:layout_marginTop="2dp" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
