--- a/app/src/main/res/xml/activity_maps_xml_constraintlayout3_scene.xml
+++ b/app/src/main/res/xml/activity_maps_xml_constraintlayout3_scene.xml
@@ -40,7 +40,7 @@
             motion:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="4dp"
             android:id="@+id/map"
-            motion:layout_constraintBottom_toTopOf="@+id/scrollView2"
+            motion:layout_constraintBottom_toTopOf="@+id/constraint_layout_2"
             android:layout_marginBottom="2dp" />
         <Constraint
             motion:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
             motion:layout_constraintTop_toBottomOf="@+id/map"
             motion:layout_constraintHorizontal_bias="1.0"
             motion:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/scrollView2"
+            android:id="@+id/constraint_layout_2"
             android:layout_marginTop="2dp" />
     </ConstraintSet>
 
@@ -77,44 +77,44 @@
             motion:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="4dp" />
         <Constraint
-            android:id="@+id/scrollView2"
+            android:id="@+id/constraint_layout_2"
             motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_width="408dp"
+            android:layout_height="242dp"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintVertical_bias="1.0"
+            motion:layout_constraintVertical_bias="0.158"
             motion:layout_constraintTop_toBottomOf="@+id/map"
-            motion:layout_constraintHorizontal_bias="1.0"
+            motion:layout_constraintHorizontal_bias="0.333"
             motion:layout_constraintStart_toStartOf="parent" />
         <Constraint
-            android:id="@+id/scrollView2"
+            android:id="@+id/constraint_layout_2"
             motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="600dp"
+            android:layout_width="408dp"
+            android:layout_height="242dp"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintVertical_bias="1.0"
+            motion:layout_constraintVertical_bias="0.158"
             motion:layout_constraintTop_toBottomOf="@+id/map"
-            motion:layout_constraintHorizontal_bias="1.0"
+            motion:layout_constraintHorizontal_bias="0.333"
             motion:layout_constraintStart_toStartOf="parent" />
         <Constraint
-            android:id="@+id/scrollView2"
+            android:id="@+id/constraint_layout_2"
             motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="620dp"
+            android:layout_width="408dp"
+            android:layout_height="242dp"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintVertical_bias="1.0"
+            motion:layout_constraintVertical_bias="0.158"
             motion:layout_constraintTop_toBottomOf="@+id/map"
-            motion:layout_constraintHorizontal_bias="1.0"
+            motion:layout_constraintHorizontal_bias="0.333"
             motion:layout_constraintStart_toStartOf="parent" />
         <Constraint
-            android:id="@+id/scrollView2"
+            android:id="@+id/constraint_layout_2"
             motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="620dp"
+            android:layout_width="408dp"
+            android:layout_height="242dp"
             motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintVertical_bias="1.0"
+            motion:layout_constraintVertical_bias="0.158"
             motion:layout_constraintTop_toBottomOf="@+id/map"
-            motion:layout_constraintHorizontal_bias="1.0"
+            motion:layout_constraintHorizontal_bias="0.333"
             motion:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
 </MotionScene>
