--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -47,7 +47,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_layout_2"
             android:layout_width="408dp"
-            android:layout_height="242dp"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -122,6 +122,7 @@
                 android:layout_height="26dp"
                 android:layout_marginStart="24dp"
 
+                android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppin"
                 android:text="Drop Off"
                 app:layout_constraintStart_toEndOf="@+id/imageView6"
@@ -173,13 +174,29 @@
                 android:id="@+id/imageView7"
                 android:layout_width="309dp"
                 android:layout_height="3dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:src="@drawable/seperate_line"
                 app:layout_constraintStart_toEndOf="@+id/imageView6"
                 app:layout_constraintTop_toBottomOf="@+id/pickUpPoint">
 
             </ImageView>
+         =
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:background="@drawable/roundedcorners"
+                android:text="Search For Drivers"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/searchMap"
+                app:layout_constraintVertical_bias="1.0">
+
+            </androidx.appcompat.widget.AppCompatButton>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
