--- a/app/src/main/res/xml/activity_maps_xml_constraintlayout3_scene.xml
+++ b/app/src/main/res/xml/activity_maps_xml_constraintlayout3_scene.xml
@@ -53,6 +53,18 @@
             motion:layout_constraintStart_toStartOf="parent"
             android:id="@+id/constraint_layout_2"
             android:layout_marginTop="2dp" />
+        <Constraint
+            motion:layout_editor_absoluteY="195dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/appCompatButton2" />
+        <Constraint
+            motion:layout_editor_absoluteY="195dp"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/appCompatButton3" />
+        <Constraint
+            motion:layout_editor_absoluteX="134dp"
+            motion:layout_constraintTop_toBottomOf="@+id/searchMap"
+            android:id="@+id/appCompatButton4" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
