Revert "Merge branch 'master' of https://github.com/ahmedmaged3k1/MiniUber"
This reverts commit ef71e56f320753a4d9b7f78340aaa94c5fab4a6c, reversing
changes made to 1ef0c4148c4cdeb81f7312b751e9b99bcfc39a03.

--- a/app/src/main/res/layout/activity_phone_verification.xml
+++ b/app/src/main/res/layout/activity_phone_verification.xml
@@ -32,17 +32,13 @@
             app:textSize="15sp" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_resendOTP"
+            android:id="@+id/btn_verify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp"
             android:layout_marginTop="70dp"
-            android:background="@drawable/disabled_resendotp_button"
-            android:alpha="0.5"
-            android:text="Resend Code"
-
-
-            android:enabled="false"
+            android:background="@drawable/roundedcorners"
+            android:text="Verify Now"
             android:textAllCaps="false"
             android:fontFamily="@font/poppin_bold"
             android:textColor="@color/white"
