--- a/app/src/main/res/layout/activity_drivers_maps.xml
+++ b/app/src/main/res/layout/activity_drivers_maps.xml
@@ -7,7 +7,7 @@
     android:id="@+id/drawerLayoutDriver"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,11 +16,10 @@
         <fragment
             android:id="@+id/driverMap"
             class="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:layout_marginTop="4dp"
+            android:layout_width="409dp"
+            android:layout_height="544dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:context=".MapsActivity" />
@@ -30,52 +29,64 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
+            android:layout_marginBottom="48dp"
             android:background="@drawable/input_bg"
             android:drawableStart="@drawable/ic_baseline_gps_fixed_24"
             android:paddingStart="8dp"
             android:scaleType="centerCrop"
+
             android:textCursorDrawable="@drawable/gps"
-            app:layout_constraintBottom_toBottomOf="@+id/riderMap"
+            app:layout_constraintBottom_toBottomOf="@+id/driverMap"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.956"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/riderMap"
-            app:layout_constraintVertical_bias="0.928">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0">
 
         </androidx.appcompat.widget.AppCompatButton>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_layout_2"
-            android:layout_width="400dp"
+            android:layout_width="match_parent"
             android:layout_height="184dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/rounded_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/riderMap"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintTop_toBottomOf="@+id/driverMap">
 
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/searchRiders"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginBottom="24dp"
-                android:background="@drawable/roundedcorners"
-                android:fontFamily="@font/poppin_bold"
+                android:layout_width="124dp"
+                android:layout_height="102dp"
+                android:layout_marginBottom="40dp"
+                android:background="@drawable/rounded_grey"
+                android:fontFamily="@font/poppin"
                 android:text="Go"
-                android:textSize="25dp"
+                android:textColor="@color/white"
+                android:textSize="45dp"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.468"
                 app:layout_constraintStart_toStartOf="parent">
 
             </androidx.appcompat.widget.AppCompatButton>
 
+            <ProgressBar
+                android:layout_width="103dp"
+                android:visibility="invisible"
+                android:layout_height="98dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.467"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"></ProgressBar>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    </androidx.constraintlayout.motion.widget.MotionLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
