--- a/app/src/main/res/layout/driver_details_diaglog.xml
+++ b/app/src/main/res/layout/driver_details_diaglog.xml
@@ -24,10 +24,42 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/poppin"
+        android:fontFamily="@font/poppin_bold"
         android:text="Driver Rate"
         app:layout_constraintStart_toEndOf="@+id/driverImageDialog"
         app:layout_constraintTop_toTopOf="parent">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/driverName"
+        android:layout_width="120dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="32dp"
+        android:fontFamily="@font/poppin"
+        android:gravity="center"
+        android:text="Ahmed Maged"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/driverRateStars"
+        app:layout_constraintVertical_bias="0.0">
+
+    </TextView>
+
+    <TextView
+
+        android:layout_width="120dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/poppin_bold"
+        android:gravity="center"
+        android:text="Driver Name"
+        app:layout_constraintEnd_toStartOf="@+id/driverName"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/driverPhoneNumber"
+        app:layout_constraintTop_toBottomOf="@+id/driverRealRate">
 
     </TextView>
 
@@ -58,7 +90,7 @@
         android:id="@+id/textView8"
         android:layout_width="94dp"
         android:layout_height="24dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="64dp"
 
         android:layout_marginTop="28dp"
         android:fontFamily="@font/poppin_bold"
